--- a/package.json
+++ b/package.json
@@ -9,13 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.24.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/native-stack": "^7.9.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
+    "axios": "^1.13.2",
+    "babel-plugin-dotenv-import": "^3.0.1",
     "expo": "~54.0.30",
+    "expo-device": "~8.0.10",
+    "expo-file-system": "^19.0.21",
+    "expo-notifications": "~0.32.15",
+    "expo-secure-store": "^15.0.8",
+    "expo-sqlite": "^16.0.10",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.7.0",
+    "lottie-react-native": "~7.3.1",
+    "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
+    "@types/uuid": "^10.0.0",
+    "babel-preset-expo": "^54.0.9",
+    "eslint": "^9.39.2",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "~5.9.2"
   },
   "private": true
