--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
@@ -18,6 +19,7 @@
     "@react-navigation/native-stack": "^7.9.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
+    "@types/jest": "29.5.14",
     "axios": "^1.13.2",
     "babel-plugin-dotenv-import": "^3.0.1",
     "expo": "~54.0.30",
@@ -40,12 +42,16 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@testing-library/react-native": "^13.3.3",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "@types/uuid": "^10.0.0",
     "babel-preset-expo": "^54.0.9",
     "eslint": "^9.39.2",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.16",
     "react-native-dotenv": "^3.4.11",
+    "react-test-renderer": "^19.1.0",
     "typescript": "~5.9.2"
   },
   "private": true
