--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint .",
+    "type-check": "tsc --noEmit",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --fix",
+    "*.{ts,tsx}": "jest --bail --findRelatedTests"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
@@ -48,11 +55,16 @@
     "@types/uuid": "^10.0.0",
     "babel-preset-expo": "^54.0.9",
     "eslint": "^9.39.2",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-expo": "^54.0.16",
+    "lint-staged": "^16.2.7",
     "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "^19.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.50.1"
   },
   "private": true
 }
