--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest",
+    "test": "jest --coverage",
     "lint": "eslint .",
     "type-check": "tsc --noEmit",
     "prepare": "husky"
