fix(ui): align footer text and fix overlay issues, update tests

--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "axios": "^1.13.2",
     "babel-plugin-dotenv-import": "^3.0.1",
     "expo": "~54.0.30",
+    "expo-av": "^16.0.8",
+    "expo-blur": "^15.0.8",
+    "expo-constants": "^18.0.12",
     "expo-device": "~8.0.10",
     "expo-file-system": "^19.0.21",
     "expo-notifications": "~0.32.15",
     "expo-secure-store": "^15.0.8",
+    "expo-speech": "^14.0.8",
     "expo-sqlite": "^16.0.10",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.7.0",
