feat: implement camera support and increase test coverage >90%

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "expo-constants": "^18.0.12",
     "expo-device": "~8.0.10",
     "expo-file-system": "^19.0.21",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.10",
     "expo-notifications": "~0.32.15",
     "expo-secure-store": "^15.0.8",
     "expo-speech": "^14.0.8",
@@ -56,10 +58,10 @@
   "devDependencies": {
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "29.5.14",
-    "babel-plugin-dotenv-import": "^3.0.1",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "@types/uuid": "^10.0.0",
+    "babel-plugin-dotenv-import": "^3.0.1",
     "babel-preset-expo": "^54.0.9",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
